Archive2/b7/18fffff632b2f3/output
main.cpp: In function 'void bar(Foo&&)':
main.cpp:16:32: error: use of deleted function 'Foo::Foo(Foo&&)'
     static Foo bar(std::move(f));
                                ^
main.cpp:11:5: note: declared here
     Foo(Foo && f) = delete;
     ^
